force-app/main/default/objects/VRT_Rental__c/VRT_Rental__c.object-meta.xml
<CustomObject>
    <description>Realiza el seguimiento de las operaciones de alquiler de los 
vehículos de la flota de la empresa.</description>
    <label>Alquiler</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Alquiler Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alquileres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>