force-app/main/default/objects/VRT_Rental__c/fields/VRT_DAT_ActualReturnDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_ActualReturnDate__c</fullName>
    <description>Fecha en la que devuelven el vehiculo</description>
    <label>Fecha real de devolución</label>
    <type>Date</type>
</CustomField>