force-app/main/default/objects/VRT_Rental__c/fields/VRT_DAT_FinalDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_FinalDate__c</fullName>
    <description>Este campo almacenará la fecha 
de finalización del periodo de 
alquiler.</description>
    <label>Fecha  Final</label>
    <type>Date</type>
</CustomField>