force-app/main/default/objects/VRT_Rental__c/fields/VRT_FOR_Duration__c.field-meta.xml
<CustomField>
    <fullName>VRT_FOR_Duration__c</fullName>
    <formula>VRT_DAT_FinalDate__c  -  VRT_DAT_InitialDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>