force-app/main/default/objects/VRT_Rental__c/fields/VRT_LKP_Account__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo de búsqueda 
establecerá una relación con el 
objeto &quot;Cuenta&quot;, permitiéndole 
asociar el alquiler con un cliente 
específico.</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alquileres</relationshipLabel>
    <relationshipName>Alquileres</relationshipName>
    <type>Lookup</type>
</CustomField>