force-app/main/default/objects/VRT_Rental__c/fields/VRT_LKP_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo de búsqueda 
establecerá una relación con el 
objeto &quot;Vehículo&quot;, permitiéndole 
asociar el alquiler con un 
vehículo específico.</description>
    <label>Vehículo</label>
    <referenceTo>VRT_Vehicle__c</referenceTo>
    <relationshipLabel>Alquileres</relationshipLabel>
    <relationshipName>Alquileres</relationshipName>
    <type>Lookup</type>
</CustomField>