force-app/main/default/objects/VRT_Rental__c/fields/VRT_SEL_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_ApprovalStatus__c</fullName>
    <description>para comprobar si necesita aprobacion el alquiler</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>