force-app/main/default/objects/VRT_Rental__c/fields/VRT_TXT_Notes__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Notes__c</fullName>
    <description>Este campo de área de texto 
largo le permitirá capturar 
cualquier nota o comentario 
adicional relacionado con el 
alquiler.</description>
    <label>Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>