force-app/main/default/objects/VRT_Rental__c/fields/VRT_TXT_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Rejection_Reason__c</fullName>
    <description>Razon del rechazo</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>