force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_PagoPendienteNoInicia_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_PagoPendienteNoInicia_ValidationRule</fullName>
    <active>true</active>
    <description>Esta restricción asegura 
que mientras que el 
alquiler esté pendiente de 
pago, éste no podrá 
iniciarse.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(VRT_SEL_Status__c, &quot;En curso&quot;),
    NOT(
        ISPICKVAL(VRT_SEL_PaymentStatus__c, &quot;Pagado&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Mientras el alquiler 
esté pendiente de pago 
no se puede iniciar.</errorMessage>
</ValidationRule>