force-app/main/default/objects/VRT_Rental__c/listViews/VRT_Rental_Financial_Approvers_VRT_Rental.listView-meta.xml
<ListView>
    <fullName>VRT_Rental_Financial_Approvers_VRT_Rental</fullName>
    <filterScope>Queue</filterScope>
    <label>AlquilaVehículo Financial Approvers</label>
    <queue>VRT_Rental_Financial_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>