force-app/main/default/objects/VRT_Rental__c/listViews/VRT_Rental_Managers_VRT_Rental.listView-meta.xml
<ListView>
    <fullName>VRT_Rental_Managers_VRT_Rental</fullName>
    <filterScope>Queue</filterScope>
    <label>AlquilaVehículo Managers</label>
    <queue>VRT_Rental_Managers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>